# a_rpg

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
.github/workflows/: build.yml
assets/maps/: big_ugly.tmx  colored_tilemap_packed.tsx  test1.tmx
script/: codgen_map.py  fetch_raylib.cmake  fetch_tinyxml2.cmake  make_static_map.py
script/map_codegen/: Tilemap.py  Tileset.py  main.py
src/: CMakeLists.txt  GameState.hpp  LogicalMap.cpp  LogicalMap.hpp  Renderer.cpp  Renderer.hpp  Tilemap.cpp  Tilemap.hpp  Tileset.gen.h  TilesetBank.cpp  TilesetBank.hpp  core.hpp  logical_map_data.gen.inc  main.cpp  parse.hpp  terrain_ids.gen.hpp  tilemap_data.gen.inc  tileset_assets.gen.inc  tileset_ids.gen.hpp
